include_directories(${PROJECT_SOURCE_DIR}/src/cpu_matlab)

add_executable(init_test init_test.cpp)
add_executable(cpu_transform_test cpu_transform_test.cpp)
add_executable(validation_check_test validation_check_test.cpp)
add_executable(cpu_sub_test cpu_sub_test.cpp)
add_executable(cpu_add_test cpu_add_test.cpp)
add_executable(cpu_mul_test cpu_mul_test.cpp)
add_executable(cpu_sparse_trp_test cpu_sparse_trp_test.cpp)
add_executable(cpu_sparse_sub_test cpu_sparse_sub_test.cpp)
add_executable(cpu_sparse_mul_test cpu_sparse_mul_test.cpp)
add_executable(cpu_sparse_add_test cpu_sparse_add_test.cpp)
add_executable(cpu_normal_trp_test cpu_normal_trp_test.cpp)
add_executable(cpu_normal_mul_test cpu_normal_mul_test.cpp)
add_executable(cpu_normal_add_test cpu_normal_add_test.cpp)
add_executable(cpu_normal_sub_test cpu_normal_sub_test.cpp)

target_link_libraries(init_test ${PROJECT_SOURCE_DIR}/bin/lib/libcpu_matlab.so)
target_link_libraries(cpu_transform_test ${PROJECT_SOURCE_DIR}/bin/lib/libcpu_matlab.so)
target_link_libraries(validation_check_test ${PROJECT_SOURCE_DIR}/bin/lib/libcpu_matlab.so)
target_link_libraries(cpu_sub_test ${PROJECT_SOURCE_DIR}/bin/lib/libcpu_matlab.so)
target_link_libraries(cpu_add_test ${PROJECT_SOURCE_DIR}/bin/lib/libcpu_matlab.so)
target_link_libraries(cpu_mul_test ${PROJECT_SOURCE_DIR}/bin/lib/libcpu_matlab.so)
target_link_libraries(cpu_sparse_trp_test ${PROJECT_SOURCE_DIR}/bin/lib/libcpu_matlab.so)
target_link_libraries(cpu_sparse_sub_test ${PROJECT_SOURCE_DIR}/bin/lib/libcpu_matlab.so)
target_link_libraries(cpu_sparse_mul_test ${PROJECT_SOURCE_DIR}/bin/lib/libcpu_matlab.so)
target_link_libraries(cpu_sparse_add_test ${PROJECT_SOURCE_DIR}/bin/lib/libcpu_matlab.so)
target_link_libraries(cpu_normal_trp_test ${PROJECT_SOURCE_DIR}/bin/lib/libcpu_matlab.so)
target_link_libraries(cpu_normal_mul_test ${PROJECT_SOURCE_DIR}/bin/lib/libcpu_matlab.so)
target_link_libraries(cpu_normal_add_test ${PROJECT_SOURCE_DIR}/bin/lib/libcpu_matlab.so)
target_link_libraries(cpu_normal_sub_test ${PROJECT_SOURCE_DIR}/bin/lib/libcpu_matlab.so)
