project(cpu_matlab_test)
cmake_minimum_required(VERSION 3.5)

set(MAIN_PROJECT_SOURCE_DIR ${PROJECT_SOURCE_DIR}/../..)
set(CPU_MATLAB_INCLUDE_DIRS ${MAIN_PROJECT_SOURCE_DIR}/src ${MAIN_PROJECT_SOURCE_DIR}/src/cpu_matlab)

include_directories(${CPU_MATLAB_INCLUDE_DIRS})

set(EXECUTABLE_OUTPUT_PATH ${MAIN_PROJECT_SOURCE_DIR}/bin/test)
add_executable(init_test init_test.cpp)
add_executable(cpu_transform_test cpu_transform_test.cpp)
add_executable(validation_check_test validation_check_test.cpp)
add_executable(cpu_sub_test cpu_sub_test.cpp)
add_executable(cpu_add_test cpu_add_test.cpp)
add_executable(cpu_mul_test cpu_mul_test.cpp)
add_executable(cpu_sparse_trp_test cpu_sparse_trp_test.cpp)
add_executable(cpu_sparse_sub_test cpu_sparse_sub_test.cpp)
add_executable(cpu_sparse_mul_test cpu_sparse_mul_test.cpp)
add_executable(cpu_sparse_add_test cpu_sparse_add_test.cpp)
add_executable(cpu_normal_trp_test cpu_normal_trp_test.cpp)
add_executable(cpu_normal_mul_test cpu_normal_mul_test.cpp)
add_executable(cpu_normal_add_test cpu_normal_add_test.cpp)
add_executable(cpu_normal_sub_test cpu_normal_sub_test.cpp)
add_executable(cpu_spdiag_test cpu_spdiag_test.cpp)

set(CPU_MATLAB_LIBRARY_DIR ${MAIN_PROJECT_SOURCE_DIR}/bin/lib)
set(CPU_MATLAB_LIBS ${CPU_MATLAB_LIBRARY_DIR}/libcpu_matlab.so)

target_link_libraries(init_test ${CPU_MATLAB_LIBS})
target_link_libraries(cpu_transform_test ${CPU_MATLAB_LIBS})
target_link_libraries(validation_check_test ${CPU_MATLAB_LIBS})
target_link_libraries(cpu_sub_test ${CPU_MATLAB_LIBS})
target_link_libraries(cpu_add_test ${CPU_MATLAB_LIBS})
target_link_libraries(cpu_mul_test ${CPU_MATLAB_LIBS})
target_link_libraries(cpu_sparse_trp_test ${CPU_MATLAB_LIBS})
target_link_libraries(cpu_sparse_sub_test ${CPU_MATLAB_LIBS})
target_link_libraries(cpu_sparse_mul_test ${CPU_MATLAB_LIBS})
target_link_libraries(cpu_sparse_add_test ${CPU_MATLAB_LIBS})
target_link_libraries(cpu_normal_trp_test ${CPU_MATLAB_LIBS})
target_link_libraries(cpu_normal_mul_test ${CPU_MATLAB_LIBS})
target_link_libraries(cpu_normal_add_test ${CPU_MATLAB_LIBS})
target_link_libraries(cpu_normal_sub_test ${CPU_MATLAB_LIBS})
target_link_libraries(cpu_spdiag_test ${CPU_MATLAB_LIBS})
